updated skills tab to talents. fixed contact me tab not showing as active

--- a/src/assets/scss/layout/_main.scss
+++ b/src/assets/scss/layout/_main.scss
@@ -2,7 +2,7 @@
 #main {
 	@include color(invert);
 	border-radius: _size(border-radius-main);
-	box-shadow: 0px 0 70px 20px #6f91aa;
+	box-shadow: 0px 0 70px 20px rgb(111, 145, 170);
 
 	> .main {
 		@include padding(5em, 5em);
